data/derived/sp14/progs/unify/prog3544.ml.out
Characters 83-87:
  let halff = rand(0,2) in
              ^^^^
Error: This expression has type int
       This is not a function; it cannot be applied.
